--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.2",
     "socket.io": "^2.3.0"
+  },
+  "engines": {
+    "node": "12.16.1"
   }
 }
