--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run start\" \"npm run client\"",
     "devDebugBackEnd": "concurrently \"npm run debug\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client"
+  "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
